chore: 添加基础变量

--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -1,4 +1,4 @@
-/* region 颜色配置 */
+/* region 基础配置 */
 // 基本颜色
 $--wh-main-color: #6979F8;
 
@@ -11,4 +11,7 @@ $--wh-icon-color: #1A051D;
 // 禁用颜色
 $--wh-text-disable-color: #D0C9D6;
 $--wh-bg-disable-color: #ECE9F1;
+
+// 边框相关
+$--wh-border-radius: 6px;
 /* endregion */
