--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,8 @@
 /* region 基础配置 */
 // 基本颜色
-$--wh-main-color: #6979F8;
+$--wh-accent-color-1: #6979F8;
+$--wh-accent-color-2: #A5AFFB;
+$--wh-accent-color-3: #E5E7FA;
 
 // 文字颜色
 $--wh-text-color: #3F3356;
@@ -14,4 +16,9 @@ $--wh-bg-disable-color: #ECE9F1;
 
 // 边框相关
 $--wh-border-radius: 6px;
+/* endregion */
+
+/* region button 配置 */
+$--wh-button-height: 40px;
+$--wh-button-padding: 20px;
 /* endregion */
